fix image cropping issues in social media on the homepage

--- a/resources/gato-template-txstate2015/css/homepage/_social.scss
+++ b/resources/gato-template-txstate2015/css/homepage/_social.scss
@@ -23,12 +23,15 @@ div#social {
     a.linktosmsite {
       @extend .hover-blur;
       @include coverimage();
+      width: 100%;
       height: 100%;
       &, img {
         display: block;
         margin: 0;
         padding: 0;
-        width: 100%;
+      }
+      img {
+        max-width: none;
       }
     }
     .arrow {
